Work on android/romcom
- Back to jdk11 (...?) for stream.toList()
- Handle absent localstorage gracefully
- Flightevent servlet